--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -11,3 +11,5 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+git add .
+git commit -m "feat(frontend): registration page UI"
